--- a/styles.css
+++ b/styles.css
@@ -135,6 +135,10 @@ img {
   text-align: center; /* Canh giữa văn bản */
 }
 
+#clock {
+  font-size: 20px;
+  font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+}
 
 
 
